# library

./: .gitignore  .gitlab-ci.yml  pyproject.toml  requirements.txt  setup.py
passthesecret/: manager.py
passthesecret/storage/: dynamodb.py  memorydb.py
tests/unit/: test_manager.py
