[tool.poetry]
name = "ptscore"
version = "0.1.7"
description = "PassTheSecret Core"
authors = ["Caesar Kabalan <caesar.kabalan@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "~3.7"
boto3 = "^1.12.46"
cryptography = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
